--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -31,7 +31,7 @@
                             <i class="icon-bars"></i>
                         </button>
                         
-                        <a href="index.html" class="logo">
+                        <a href="../../user/home.ejs" class="logo">
                             <img src="assets/images/Beep.png" alt="Beep Logo" width="132" height="32">
                         </a>
                     </div><!-- End .header-left -->
