--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -77,66 +77,30 @@
                         </a>
 
                         <div class="dropdown cart-dropdown">
-                            <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
+                            <a href="#" class="dropdown-toggle" role="button">
                                 <i class="icon-shopping-cart"></i>
                                 <span class="cart-count">2</span>
                             </a>
-
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <div class="dropdown-cart-products">
-                                    <div class="product">
-                                        <div class="product-cart-details">
-                                            <h4 class="product-title">
-                                                <a href="product.html">Beige knitted elastic runner shoes</a>
-                                            </h4>
-
-                                            <span class="cart-product-info">
-                                                <span class="cart-product-qty">1</span>
-                                                x $84.00
-                                            </span>
-                                        </div><!-- End .product-cart-details -->
-
-                                        <figure class="product-image-container">
-                                            <a href="product.html" class="product-image">
-                                                <img src="assets/images/products/cart/product-1.jpg" alt="product">
-                                            </a>
-                                        </figure>
-                                        <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                    </div><!-- End .product -->
-
-                                    <div class="product">
-                                        <div class="product-cart-details">
-                                            <h4 class="product-title">
-                                                <a href="product.html">Blue utility pinafore denim dress</a>
-                                            </h4>
-
-                                            <span class="cart-product-info">
-                                                <span class="cart-product-qty">1</span>
-                                                x $76.00
-                                            </span>
-                                        </div><!-- End .product-cart-details -->
-
-                                        <figure class="product-image-container">
-                                            <a href="product.html" class="product-image">
-                                                <img src="assets/images/products/cart/product-2.jpg" alt="product">
-                                            </a>
-                                        </figure>
-                                        <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                    </div><!-- End .product -->
-                                </div><!-- End .cart-product -->
-
-                                <div class="dropdown-cart-total">
-                                    <span>Total</span>
-
-                                    <span class="cart-total-price">$160.00</span>
-                                </div><!-- End .dropdown-cart-total -->
-
-                                <div class="dropdown-cart-action">
-                                    <a href="cart.html" class="btn btn-primary">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
-                                </div><!-- End .dropdown-cart-total -->
-                            </div><!-- End .dropdown-menu -->
                         </div><!-- End .cart-dropdown -->
+                        
+                        <div class="profile">
+                                <a href="/dashboard">
+                                    <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_19_417)">
+                                        <path d="M16.2168 12.1333C18.0723 13.9004 19 16.0328 19 18.5303H17.5156C17.5156 16.4333 16.7301 14.6367 15.1592 13.1406C13.5882 11.6444 11.7018 10.8963 9.5 10.8963C7.29818 10.8963 5.41178 11.6444 3.84082 13.1406C2.26986 14.6367 1.48438 16.4333 1.48438 18.5303H0C0 16.0328 0.927734 13.9004 2.7832 12.1333C3.82227 11.1437 5.02214 10.4251 6.38281 9.97745C5.66536 9.50622 5.09017 8.88773 4.65723 8.12198C4.22428 7.35623 4.00781 6.53747 4.00781 5.66569C4.00781 4.22844 4.5459 2.99735 5.62207 1.97242C6.69824 0.947496 7.99089 0.435034 9.5 0.435034C11.0091 0.435034 12.3018 0.947496 13.3779 1.97242C14.4541 2.99735 14.9922 4.22844 14.9922 5.66569C14.9922 6.25473 14.8932 6.8202 14.6953 7.36212C14.4974 7.90403 14.2191 8.39882 13.8604 8.84649C13.5016 9.29416 13.0872 9.67115 12.6172 9.97745C13.9779 10.4251 15.1777 11.1437 16.2168 12.1333ZM6.66113 8.36937C6.66113 8.36937 6.85596 8.55492 7.24561 8.92601C7.63525 9.29711 8.38672 9.48265 9.5 9.48265C10.6133 9.48265 11.5596 9.11156 12.3389 8.36937C13.1182 7.62718 13.5078 6.72596 13.5078 5.66569C13.5078 4.60542 13.1182 3.70419 12.3389 2.96201C11.5596 2.21982 10.6133 1.84872 9.5 1.84872C8.38672 1.84872 7.44043 2.21982 6.66113 2.96201C5.88184 3.70419 5.49219 4.60542 5.49219 5.66569C5.49219 6.72596 5.88184 7.62718 6.66113 8.36937Z" fill="#EEEEEE"/>
+                                        </g>
+                                        <defs>
+                                        <clipPath id="clip0_19_417">
+                                        <rect width="19" height="19" fill="white" transform="matrix(1 0 0 -1 0 19)"/>
+                                        </clipPath>
+                                        </defs>
+                                        </svg>
+                                        
+                                </a> 
+                            
+                        </div>
+                        
+                        
                     </div><!-- End .header-right -->
                 </div><!-- End .container -->
             </div><!-- End .header-middle -->
