--- a/views/User/dashboard.ejs
+++ b/views/User/dashboard.ejs
@@ -83,7 +83,7 @@
                         </button>
 
                         <a href="index.html" class="logo">
-                            <img src="assets/images/logo.png" alt="Molla Logo" width="105" height="25">
+                    <img src="assets/images/Beep.png" alt="Beep Logo" width="105" height="25">
                         </a>
 
                         <nav class="main-nav">
@@ -594,7 +594,7 @@
 								        <a class="nav-link" id="tab-account-link" data-toggle="tab" href="#tab-account" role="tab" aria-controls="tab-account" aria-selected="false">Account Details</a>
 								    </li>
 								    <li class="nav-item">
-								        <a class="nav-link" href="#">Sign Out</a>
+								        <a class="nav-link" href="/logOut">Log Out</a>
 								    </li>
 								</ul>
 	                		</aside><!-- End .col-lg-3 -->
